<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/main_linear_layout"
    tools:context="com.example.android.mathquiz.MainActivity">

    <TextView
        style="@style/all_title_text"
        android:text="@string/title" />

    <EditText
        android:id="@+id/name"
        style="@style/all_sub_text"
        android:hint="@string/enter_name"
        android:inputType="text"/>
    <TextView
        style="@style/all_sub_text"
        android:text="@string/q_one"/>
    <RadioGroup
        style="@style/question_group">
            <RadioButton
                android:id="@+id/q_one_one"
                style="@style/check_radio"
                android:text="@string/radio_one_a"/>
            <RadioButton
                android:id="@+id/q_one_two"
                style="@style/check_radio"
                android:text="@string/radio_one_b"/>
            <RadioButton
                android:id="@+id/q_one_three"
                style="@style/check_radio"
                android:text="@string/radio_one_c"/>
    </RadioGroup>

    <TextView
        style="@style/all_sub_text"
        android:text="@string/q_two"/>
    <LinearLayout
        style="@style/question_group">
        <CheckBox
            android:id="@+id/q_two_one"
            style="@style/check_radio"
            android:text="@string/radio_two_a"/>
        <CheckBox
            android:id="@+id/q_two_two"
            style="@style/check_radio"
            android:text="@string/radio_two_b"/>
        <CheckBox
            android:id="@+id/q_two_three"
            style="@style/check_radio"
            android:text="@string/radio_two_c"/>
    </LinearLayout>
    <TextView
        style="@style/all_sub_text"
        android:text="@string/q_three"/>
    <RadioGroup
        style="@style/question_group">
        <RadioButton
            android:id="@+id/q_three_one"
            style="@style/check_radio"
            android:text="@string/radio_three_a"/>
        <RadioButton
            android:id="@+id/q_three_two"
            style="@style/check_radio"
            android:text="@string/radio_three_b"/>
        <RadioButton
            android:id="@+id/q_three_three"
            style="@style/check_radio"
            android:text="@string/radio_three_c"/>
    </RadioGroup>
    <TextView
        style="@style/all_sub_text"
        android:text="@string/q_four"/>
    <RadioGroup
        style="@style/question_group">
        <RadioButton
            android:id="@+id/q_four_one"
            style="@style/check_radio"
            android:text="@string/radio_four_a"/>
        <RadioButton
            android:id="@+id/q_four_two"
            style="@style/check_radio"
            android:text="@string/radio_four_b"/>
        <RadioButton
            android:id="@+id/q_four_three"
            style="@style/check_radio"
            android:text="@string/radio_four_c"/>
    </RadioGroup>
    <TextView
        style="@style/all_sub_text"
        android:text="@string/q_five"/>
    <RadioGroup
        style="@style/question_group">
        <RadioButton
            android:id="@+id/q_five_one"
            style="@style/check_radio"
            android:text="@string/radio_five_a"/>
        <RadioButton
            android:id="@+id/q_five_two"
            style="@style/check_radio"
            android:text="@string/radio_five_b"/>
        <RadioButton
            android:id="@+id/q_five_three"
            style="@style/check_radio"
            android:text="@string/radio_five_c"/>
    </RadioGroup>
    <Button
        style="@style/style_button"
        android:text="@string/button_text"
        android:onClick="submitQuizResult"
        />
</LinearLayout>
</ScrollView>

